 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2014 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2014 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2014-11-16
r1566 output summary for averaged force of components
 - split rms and rmsmean to rmsV, rmsmeanV, rmsP, rmsmeanP, rmsT, rmsmeanT
 - change trigger of statistic from LES.calc to Mode.StatVelocity
 - check the number of cylinders in IP_Cylinder
 - write a separate force file for each obstacle

--------------------------
2014-11-14
r1565 arrangement ffv_blas.f90

--------------------------
2014-11-13
r1564 bug fix : restart statistic and cast pointer to fortran subroutine
 - Control::getTimeControl()
 - modify cast to fortran subroutine in ffv_Loop.C
 - add InnerIteration of BiCGstab

--------------------------
2014-11-09
r1563 improve calcForce()

r1562 improve PBiCGstab
 - suppress initialization of arrays in PBiCGstab

r1651 modify for PMlib-3.0.0
 - improve PBiCGstab algorithm
 - chnage policy of 2D limitation when 2D must be 1 layer in Z-direction (3 layers in the past)

--------------------------
2014-11-06
r1650 outflow condition modify
 - vobc_cc_outflow_() exclude cell of OBC_MASK
 - sph derived >> fix

--------------------------
2014-11-05
r1649 CDMlib plot3d restart ok
 - improve plot3d format in CDMlib-0.5.3
 - d_iobuf was examined
 - confirm restart by plot3d format

--------------------------
2014-11-01
r1648 CDMlib plot3d restart
 - extract_scalar()/_vector()
 - pack_to_buffer_(), unapck_from_buffer_()


--------------------------
2014-11-01
r1647 CDMlib plot3d branch test
 - XYZ file, Iblank option
 - Control::GuideOut >> change input from "with/without" to the number


--------------------------
2014-10-31
r1646 Experiment 4th div error