@@ -25,7 +25,7 @@ AC_CONFIG_HEADERS([config.h])
 #
 # revision No.
 #
-FFVC_REVISION="20141116_1500"
+FFVC_REVISION="20141117_1200"
 AC_SUBST(FFVC_REVISION)
 
 
